[package]
name = "crawl"
version = "0.1.0"
edition = "2021"
authors = ["Issak K. <kennyissak@gmail.com>"]
description = "Does awesome things"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
html-escape = "0.2.11"