[package]
name = "rocinante"
version = "0.1.0"
edition = "2021"
authors = ["Issak K. <kennyissak@gmail.com>"]
description = "Does awesome things"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
html-escape = "0.2.11"
colorful = "0.2.1"
chrono = "0.4"
web3 = "0.17.0"
secp256k1 = { version = "0.24.0", features = ["rand-std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"